[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/PartySelection/PartySelection.gd" type="Script" id=1]
[ext_resource path="res://UI/PartyCharInfoContainer.tscn" type="PackedScene" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 1890.0
margin_bottom = 1050.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 1106.0
margin_bottom = 1020.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5

[node name="SelectionContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 1106.0
margin_bottom = 381.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.6
custom_constants/separation = 50
alignment = 1

[node name="PartySlot_1" type="CenterContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/SelectionContainer"]
margin_left = 311.0
margin_right = 439.0
margin_bottom = 381.0

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/SelectionContainer/PartySlot_1"]
margin_top = 126.0
margin_right = 128.0
margin_bottom = 254.0
rect_min_size = Vector2( 128, 128 )

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer/SelectionContainer/PartySlot_1/Button"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 128, 128 )

[node name="PartySlot_2" type="CenterContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/SelectionContainer"]
margin_left = 489.0
margin_right = 617.0
margin_bottom = 381.0

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/SelectionContainer/PartySlot_2"]
margin_top = 126.0
margin_right = 128.0
margin_bottom = 254.0
rect_min_size = Vector2( 128, 128 )

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer/SelectionContainer/PartySlot_2/Button"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 128, 128 )

[node name="PartySlot_3" type="CenterContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/SelectionContainer"]
margin_left = 667.0
margin_right = 795.0
margin_bottom = 381.0

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/SelectionContainer/PartySlot_3"]
margin_top = 126.0
margin_right = 128.0
margin_bottom = 254.0
rect_min_size = Vector2( 128, 128 )

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer/SelectionContainer/PartySlot_3/Button"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 128, 128 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 385.0
margin_right = 1106.0
margin_bottom = 1020.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="CharGrid" type="GridContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1101.0
margin_bottom = 630.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 7

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 1110.0
margin_right = 1860.0
margin_bottom = 1020.0
rect_pivot_offset = Vector2( -1836, 104 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PartyCharInfoContainer" parent="MarginContainer/HBoxContainer/MarginContainer" instance=ExtResource( 2 )]
margin_left = 0.0
margin_right = 750.0
margin_bottom = 1020.0

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/SelectionContainer/PartySlot_1/Button" to="." method="_on_Party1_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/SelectionContainer/PartySlot_2/Button" to="." method="_on_Party_2_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/SelectionContainer/PartySlot_3/Button" to="." method="_on_Party3_pressed"]
